Changes made from the "0.5" release to the "0.6" release:
-----------------------------------------------------------

- Removed some calls to __glcGetCurrent() that could cause operations to be
  performed on the wrong context or to fail when they should succeed (issue
  pointed out by Brandon Casey).
- Removed glPush/PopClientAttrib() and use glIsEnabled() instead since that is
  much faster.
- Vertex arrays are now used to render characters in GLC_TRIANGLE mode.
- QuesoGLC now uses GLEW, the OpenGL Extension Wrangler, to manage OpenGL
  extensions.
- Removed the master object, uses FontConfig API instead. This allows to not
  load all the masters in memory : masters are now loaded "just in time" which
  reduces the memory footprint of quesoGLC. Furthermore, when GLC_AUTO_FONT is
  enabled, QuesoGLC takes into account the user preferences for FontConfig.

* Brandon Casey
- Modified autoconf files so they build with version 2.57.
- Made QuesoGLC compile with Freetype library older than 2.1.8.
- Changed __glcFindIndexList() semantics to return address of separator
  occurrence.
- Fixed a test so that the GLC_CATALOG_LIST environment variable is now taken
  into account.
- Prevented advance past end of string during conversion between logical order
  and visual order so that zero length strings are handled properly.
- Removed NULL dereference after FcPatternGetString().
- Fixed texture atlas coordinate calculation.
- Improved texture rendering by optimizing the bounding box coordinates
  calculation.

Changes made from the "0.4" release to the "0.5" release:
-----------------------------------------------------------

- Fixed the #include so that QuesoGLC can be built with MSVC++
- Added an attribute stack to save and restore the GLC state variables.
- Added a matrix stack for GLC_BITMAP_MATRIX.
- Added support for kerning.
- Added support for the FreeType cache sub-system.
- Force thread-safety for included libraries.